# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  ruff.toml
.github/workflows/: test-check.yml
page_analyzer/: __init__.py  app.py  app_from_deepseek.py  db_connection.py  parser.py  url_repository.py  user_repository.py  utils.py
page_analyzer/templates/: layout.html  main.html  url_details.html  urls.html
page_analyzer/templates/main/: main.html
page_analyzer/templates/users/: edit.html  index.html  layout and main.html  layout.html  new.html  show.html
